<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>dev.ikm.build</groupId>
        <artifactId>java-parent</artifactId>
        <version>0.4.0</version>
        <relativePath />
    </parent>

    <groupId>dev.ikm.komet</groupId>
    <artifactId>komet-parent</artifactId>
    <name>KOMET</name>
    <version>1.13.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>
    <organization>
        <name>Health Level Seven International</name>
        <url>http://hl7.org</url>
    </organization>
    <properties>
        <maven.javadoc.skip>true</maven.javadoc.skip>
        <tinkar-core.groupId>dev.ikm.tinkar</tinkar-core.groupId>
        <tinkar-core.version>1.9.0</tinkar-core.version>

        <tinkar-jpms-deps.groupId>dev.ikm.jpms</tinkar-jpms-deps.groupId>
        <tinkar-jpms-deps.version>1.0.15</tinkar-jpms-deps.version>

        <auto-service.version>1.0-rc7</auto-service.version>
        <jpms-auto-service.version>1.0.1-r2</jpms-auto-service.version>
        <jpms-record-builder-core.version>34-r2</jpms-record-builder-core.version>
        <jpms-roaringbitmap.version>0.9.31-r2</jpms-roaringbitmap.version>

        <maven-project-info-reports-plugin.version>3.4.2</maven-project-info-reports-plugin.version>
        <maven-failsafe-plugin.version>3.0.0</maven-failsafe-plugin.version>

        <controlsfx.version>11.1.0</controlsfx.version>
        <ikonli.version>12.2.0</ikonli.version>
        <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
        <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
        <maven-failsafe-plugin.version>3.0.0-M5</maven-failsafe-plugin.version>
        <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
        <maven-project-info-reports-plugin.version>3.1.2</maven-project-info-reports-plugin.version>
        <maven-site-plugin.version>3.9.1</maven-site-plugin.version>
        <maven-source-plugin.version>3.2.0</maven-source-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
        <nsmenufx.version>3.1.0</nsmenufx.version>
        <openjfx.version>19</openjfx.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <record-builder-core.version>33</record-builder-core.version>
        <slf4j.version>2.0.0-alpha6</slf4j.version>

        <javafx.version>0.0.8</javafx.version>
        <jpackage.version>1.6.0</jpackage.version>
    </properties>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>${maven-assembly-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>com.mycila</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <configuration>
                        <header>${basedir}/../../etc/license.txt</header>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-failsafe-plugin.version}</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                        <fork>true</fork>
                        <compilerArgs>
                            <arg>--enable-preview</arg>
                            <arg>--add-exports javafx.controls/com.sun.javafx.scene.control.behavior=dev.ikm.komet.navigator</arg>
                        </compilerArgs>
                        <annotationProcessorPaths>
                            <annotationProcessorPath>
                                <groupId>io.soabase.record-builder</groupId>
                                <artifactId>record-builder-processor</artifactId>
                                <version>${record-builder-core.version}</version>
                            </annotationProcessorPath>
                            <annotationProcessorPath>
                                <groupId>com.google.auto.service</groupId>
                                <artifactId>auto-service</artifactId>
                                <version>${auto-service.version}</version>
                            </annotationProcessorPath>
                        </annotationProcessorPaths>
                        <annotationProcessors>
                            <annotationProcessor>io.soabase.recordbuilder.processor.RecordBuilderProcessor
                            </annotationProcessor>
                            <annotationProcessor>com.google.auto.service.processor.AutoServiceProcessor
                            </annotationProcessor>
                        </annotationProcessors>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven-source-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                                <goal>test-jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>${maven-site-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.controls/com.sun.javafx.scene.control.behavior=dev.ikm.komet.navigator</arg>
                    </compilerArgs>
                    <fork>true</fork>
                    <annotationProcessorPaths>
                        <annotationProcessorPath>
                            <groupId>io.soabase.record-builder</groupId>
                            <artifactId>record-builder-processor</artifactId>
                            <version>${record-builder-core.version}</version>
                        </annotationProcessorPath>
                        <annotationProcessorPath>
                            <groupId>com.google.auto.service</groupId>
                            <artifactId>auto-service</artifactId>
                            <version>${auto-service.version}</version>
                        </annotationProcessorPath>
                    </annotationProcessorPaths>
                    <annotationProcessors>
                        <annotationProcessor>io.soabase.recordbuilder.processor.RecordBuilderProcessor
                        </annotationProcessor>
                        <annotationProcessor>com.google.auto.service.processor.AutoServiceProcessor
                        </annotationProcessor>
                    </annotationProcessors>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>${maven-project-info-reports-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>${maven-failsafe-plugin.version}</version>
                <configuration>
                    <reportsDirectories>
                        <trimStackTrace>false</trimStackTrace>
                        <reportsDirectory>${basedir}/target/failsafe-reports</reportsDirectory>
                    </reportsDirectories>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
    <distributionManagement>
        <site>
            <id>tinkar.hl7.org</id>
            <url>file:////opt/dev-websites/komet</url>
            <!-- chflags nohidden /System/Volumes/Data/opt should unhide the /opt folder on macOS
                The use of /opt for add-on software is a well-established practice in the UNIX community.
            -->
        </site>
    </distributionManagement>
    <modules>
        <module>application</module>
        <module>artifact</module>
        <module>builder</module>
        <module>classification</module>
        <module>details</module>
        <module>executor</module>
        <module>framework</module>
        <module>list</module>
        <module>navigator</module>
        <module>preferences</module>
        <module>progress</module>
        <module>search</module>
        <module>komet-terms</module>
    </modules>
</project>
